--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,9 @@
     <!-- Shared version number properties -->
     <properties>
         <java-version>1.8</java-version>
-        <org.springframework-version>4.2.2.RELEASE</org.springframework-version>
-        <org.springframework.security-version>4.0.1.RELEASE</org.springframework.security-version>
-        <org.aspectj-version>1.8.1</org.aspectj-version>
-        <org.slf4j-version>1.7.12</org.slf4j-version>
+        <org.springframework-version>5.0.2.RELEASE</org.springframework-version>
+        <junit.version>4.11</junit.version>
+        <jackson.version>2.9.3</jackson.version>
     </properties>
 
     <dependencies>
@@ -39,6 +38,28 @@
             <artifactId>spring-webmvc</artifactId>
             <version>${org.springframework-version}</version>
         </dependency>
+        <!-- The spring-aop module provides an AOP Alliance-compliant aspect-oriented
+            programming implementation allowing you to define -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
+        <!-- The spring-web module provides basic web-oriented integration features
+            such as multipart file upload functionality and the initialization of the
+            IoC container using Servlet listeners and a web-oriented application context -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
+
+        <!--Json-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
 
         <!-- Logging -->
         <dependency>
@@ -58,7 +79,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -72,6 +93,16 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <url>http://localhost:8080/</url>
+                    <server>my-tomcat</server>
+                    <path>/</path>
                 </configuration>
             </plugin>
 
