--- a/pom.xml
+++ b/pom.xml
@@ -74,11 +74,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.dataformat</groupId>
-            <artifactId>jackson-dataformat-xml</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.fasterxml.jackson.dataformat</groupId>-->
+            <!--<artifactId>jackson-dataformat-xml</artifactId>-->
+            <!--<version>${jackson.version}</version>-->
+        <!--</dependency>-->
 
         <!-- https://mvnrepository.com/artifact/log4j/log4j -->
         <dependency>
