--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <java-version>1.8</java-version>
         <org.springframework-version>5.0.2.RELEASE</org.springframework-version>
         <junit.version>4.11</junit.version>
+        <testng.version>6.11</testng.version>
+        <mockito.version>1.9.5</mockito.version>
         <jackson.version>2.9.3</jackson.version>
     </properties>
 
@@ -94,10 +96,23 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${testng.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
-         <plugins>
+        <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -116,14 +131,14 @@
                 </configuration>
             </plugin>
             <!--<plugin>-->
-                <!--<groupId>org.apache.tomcat.maven</groupId>-->
-                <!--<artifactId>tomcat7-maven-plugin</artifactId>-->
-                <!--<version>2.2</version>-->
-                <!--<configuration>-->
-                    <!--<url>http://localhost:8080/</url>-->
-                    <!--<server>my-tomcat</server>-->
-                    <!--<path>/</path>-->
-                <!--</configuration>-->
+            <!--<groupId>org.apache.tomcat.maven</groupId>-->
+            <!--<artifactId>tomcat7-maven-plugin</artifactId>-->
+            <!--<version>2.2</version>-->
+            <!--<configuration>-->
+            <!--<url>http://localhost:8080/</url>-->
+            <!--<server>my-tomcat</server>-->
+            <!--<path>/</path>-->
+            <!--</configuration>-->
             <!--</plugin>-->
 
         </plugins>
