--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,8 +5,7 @@ log4j.appender.Appender1=org.apache.log4j.ConsoleAppender
 log4j.appender.Appender1.layout=org.apache.log4j.PatternLayout
 log4j.appender.Appender1.layout.ConversionPattern=%-7p %d [%t] %c %x - %m%n
 
-
-log4j.appender.NotConsole=org.apache.log4j.RollingFileAppender
-log4j.appender.NotConsole.fileName=${app.root}/fileName.log
-log4j.appender.NotConsole.layout=org.apache.log4j.PatternLayout
-log4j.appender.NotConsole.layout.ConversionPattern=%-7p %d [%t] %c %x - %m%n
+log4j.appender.Appender2=org.apache.log4j.FileAppender
+log4j.appender.Appender2.File=./oms.log
+log4j.appender.Appender2.layout=org.apache.log4j.PatternLayout
+log4j.appender.Appender2.layout.ConversionPattern=%-7p %d [%t] %c %x - %m%n
