--- a/pom.xml
+++ b/pom.xml
@@ -85,10 +85,18 @@
 
         <!-- swagger dependencies/api documentation -->
         <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-jaxrs2</artifactId>
-            <version>2.0.0-rc1</version>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.7.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
+
 
         <!-- Test -->
         <dependency>
