--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,11 +1,23 @@
-# LOG4J configuration
-log4j.rootLogger=INFO, Appender1, Appender2
+# Root logger option
+log4j.rootLogger=DEBUG, stdout, file 
 
-log4j.appender.Appender1=org.apache.log4j.ConsoleAppender
-log4j.appender.Appender1.layout=org.apache.log4j.PatternLayout
-log4j.appender.Appender1.layout.ConversionPattern=%-7p %d [%t] %c %x - %m%n
+# Redirect log messages to console
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender 
+log4j.appender.stdout.Target=System.out 
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
-log4j.appender.Appender2=org.apache.log4j.FileAppender
-log4j.appender.Appender2.File=./oms.log
-log4j.appender.Appender2.layout=org.apache.log4j.PatternLayout
-log4j.appender.Appender2.layout.ConversionPattern=%-7p %d [%t] %c %x - %m%n
+# Redirect log messages to a log file
+log4j.appender.file=org.apache.log4j.RollingFileAppender
+#outputs to Tomcat home
+log4j.appender.FILE.Append=true
+log4j.appender.file.File=${catalina.home}/logs/api.log
+log4j.appender.file.MaxFileSize=5MB
+log4j.appender.file.MaxBackupIndex=10
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
+
+#log4j.appender.Appender2=org.apache.log4j.DailyRollingFileAppender
+#log4j.appender.Appender2.File=app.log
+#log4j.appender.Appender2.DatePattern='.'yyyy-MM-dd
