Update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -15,13 +15,6 @@
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
 
-# Gradle:
-.idea/**/gradle.xml
-.idea/**/libraries
-
-# CMake
-cmake-build-debug/
-cmake-build-release/
 
 # Mongo Explorer plugin:
 .idea/**/mongoSettings.xml
@@ -33,6 +26,7 @@ cmake-build-release/
 
 # IntelliJ
 out/
+*iml
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
