--- a/pom.xml
+++ b/pom.xml
@@ -187,6 +187,11 @@
             <artifactId>hibernate-validator-cdi</artifactId>
             <version>6.0.7.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.1</version>
+        </dependency>
     </dependencies>
 
     <build>
