--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ DB_NAME = omapp-db
 DB_NAME_TEST = omapp-db-test
 HOST = 127.0.0.1
 PORT = 27017
-API_KEY = DannoDanithi
+API_KEY = yZwjdlsmaB0D7jdZpC8KO2YnOhLjhMax
